# k8s-csi-xetfs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
builder/: Dockerfile  Dockerfile.rust  build.sh  docker-compose.yml
deploy/: Dockerfile  apps.yaml  csidriver.yaml  install-driver.sh  node-daemonset.yaml  node-serviceaccount.yaml  secret.yaml.template  uninstall-driver.sh
deploy/example/: Dockerfile.app
example/: app.py  apps.yaml
rust/: Cargo.toml
rust/gitxet/: Cargo.toml
rust/k8s-csi-xetfs/: Cargo.toml  build.rs
rust/k8s-csi-xetfs/src/: args.rs  constants.rs  driver.rs  error.rs  identity.rs  lib.rs  main.rs  node.rs
rust/k8s-csi-xetfs/src/driver/: mount.rs  volume.rs
rust/k8s-csi-xetfs/src/node/: mount.rs
src/: constants.rs  error.rs  identity.rs  lib.rs  main.rs  node.rs
src/node/: mount.rs  volume.rs
