[package]
name = "k8s-csi-xetfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "transport"] }
thiserror = "1.0.50"
veil = "0.1.6"
gitxetcore = { git = "https://github.com/xetdata/xet-core" }
clap = { version = "4.4.8", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10.2"
